compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__list.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1908
expression: "[1, 2.0]"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ [1, 2.0]
  │     ^^^

Expected type:

    Int

Found type:

    Float

